# parquet-s3-meta

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/report/: s3_manual_sample.json  sample.json  summary_brotli.pcap  summary_col_vs_row.pcap  summary_full.pcap  summary_gzip.pcap  summary_row.pcap  summary_s3_manual.pcap  summary_scan.pcap
notebooks/: 00_fake_data.py  01_setup_minio.py  10_inspect_offline_parquet.py  11_polars_lazy.py  12_parquet_metadata.py  13_parquet_s3.py
parquet_s3_meta/: encoding.py  parquet.thrift
